alignment fix

--- a/src/app/wca/pages/create-course/create-course.component.scss
+++ b/src/app/wca/pages/create-course/create-course.component.scss
@@ -661,8 +661,9 @@ input[type="text"] {
 }
 
 .instructorIcon {
-    margin: 14%;
+    margin: 14% 14% 10% 14%;
     margin-left: 20%;
+    padding-top: 25px;
 }
 
 .collapaseIcon {
